--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
+  "engines": {
+    "node": "12.16.1",
+    "npm": "6.14.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
