--- a/package.json
+++ b/package.json
@@ -24,13 +24,9 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
-  "engines": {
-    "node": "12.16.1",
-    "npm": "6.14.5"
-  },
   "scripts": {
     "start": "PORT=3006 react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts ../Server/build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
